# rust_web

./: .env  .gitignore  Cargo.toml  configuration.toml
migrations/: 20230114011159_create_table_user.sql  20230116034929_rooms_tables.sql  20230119035400_tables_setup.sql  20230120215434_tables_setup.sql  20230313051850_initial_setup.sql  20230320040142_initial_setup.sql
src/: configuration.rs  lib.rs  main.rs  model.rs  startup.rs  utils.rs
src/database/: conn_table_db.rs  mod.rs  rooms_db.rs  users_db.rs
src/game_logic/: deck.rs  game.rs  game_actor.rs  game_actor_messages.rs  game_flow.rs  game_setup.rs  game_state.rs  game_turn_manager.rs  mod.rs  player.rs  types.rs
src/middleware/: custom_errors.rs  jwt_auth.rs  mod.rs
src/redis_utils/: mod.rs  pub_sub.rs  redis_state.rs
src/routes/: lobby.rs  mod.rs  room.rs  root.rs  ws_conn.rs  ws_route.rs
src/sse/: messages.rs  mod.rs  sse_conn_user.rs  sse_lobby.rs
src/websockets/: game_ws.rs  lobby_messages.rs  lobby_ws.rs  messages.rs  mod.rs  ws.rs
src/websockets/game_ws/: game_messages.rs  ws_g.rs
src/websockets/lobby_ws/: lobby_messages.rs  ws.rs  ws_l.rs
static/: index.html  index2.html  lobby.html  lobby2meapagar.html  room.html  room2.html
static/css/: index-55c0e878.css  lobby-8775b852.css  room-e96a5111.css
static/js/: TimerWorker-303a4f40.js  index-0e7df0f0.js  lobby-57104238.js  lobby-8775b852.css  lobby-e8f25acd.js  lobby-f0920fd6.js  room-706e8c8e.js
tests/: lobby_endpoint.rs  root_endpoint.rs
tests/common/: mod.rs
