[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.1"
uuid = { version = "1.2.2", features = ["v4"] }
actix-files = "0.6.2"
unicode-segmentation = "1"
validator = "0.14"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","macros", "postgres", "uuid", "chrono", "migrate" ] }


[dev-dependencies]
reqwest = "0.11"
