[package]
name = "bongo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
config = "0.13.1"
uuid = { version = "1.2.2", features = ["v4","serde"] }
unicode-segmentation = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","macros", "postgres", "uuid", "chrono", "migrate" ] }
actix-web-actors = "4.1.0"
actix = "0.13.0"
env_logger = "0.10.0"
redis = { version = "0.22.3", features = ["tokio-comp"] }
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
futures-util = "0.3.25"
derive_more = {version="0.99.17", default-features=false, features= ["display", "error"]}

[dev-dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
